--- a/style.css
+++ b/style.css
@@ -244,11 +244,13 @@ body::before {
 .imagem-container {
     width: 100%;
     max-width: 300px;
+    height: 300px;
     margin: 1rem auto;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: height 0.5s ease;
 }
 
 #imagemCentral {
@@ -1396,15 +1398,15 @@ h3 {
 }
 
 #escudoIcon {
-    top: 20%;
-    left: 10%;
+    top: 20px;
+    left: 20px;
     animation-delay: 0s;
     animation-duration: 8s;
 }
 
 #estrelaIcon {
-    top: 60%;
-    right: 15%;
+    bottom: 20px;
+    right: 20px;
     animation-delay: 2s;
     animation-duration: 7s;
 }
