--- a/style.css
+++ b/style.css
@@ -1384,7 +1384,7 @@ h3 {
 #surpresaVideo {
     width: 100%;
     max-width: 100%; /* Garante que não ultrapasse o container */
-    height: auto;
+    height: 100%; /* Força o vídeo a ocupar a altura do contêiner */
     max-height: 100%; /* Ocupa a altura disponível do modal-content */
     object-fit: contain; /* Garante que o vídeo não seja cortado */
     border-radius: 10px;
