--- a/style.css
+++ b/style.css
@@ -33,6 +33,9 @@ body {
     overflow-x: hidden;
     min-height: 100vh;
     padding: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* Estrelas */
